--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,3 +23,15 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
+Suggests: 
+    knitr,
+    rmarkdown,
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
+Imports: 
+    purrr,
+    dplyr,
+    tibble,
+    data.table,
+    tidyr
+VignetteBuilder: knitr
