--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,3 +2,10 @@
 
 export(flag_outliers)
 export(missing_imputer)
+export(overview)
+import(purrr)
+import(tibble)
+importFrom(stats,median)
+importFrom(stats,quantile)
+importFrom(stats,sd)
+importFrom(stats,var)
